--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "maska": "^2.1.10",
+    "sass": "^1.69.4",
+    "sass-loader": "^13.3.2",
+    "swiper": "^11.2.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
